--- a/index.qmd
+++ b/index.qmd
@@ -208,3 +208,13 @@ Please **choose the tool that works best for you**!
 [see @Grenie2022]
 
 ## Acknowledgements
+
+- Japan Society for the Promotion of Science
+
+- Members of the Iwasaki lab, The University of Tokyo
+
+- C. Webb
+
+- M. Hassler
+
+## References {.scrollable}
